fix(theme): fix blog hero info align

--- a/packages/theme/src/client/styles/blog/blog-hero.scss
+++ b/packages/theme/src/client/styles/blog/blog-hero.scss
@@ -78,6 +78,10 @@
   }
 }
 
+.vp-blog-hero-info {
+  text-align: center;
+}
+
 .vp-blog-hero-title {
   margin: 0.5rem auto;
   font-weight: bold;
